0022818: Wrong triangulation of Revolution surface with slice angle <= 180 degree Take face attributes into account to calculate 2d tolerance Adding test cases for this fix Correction according additional bug CR23832